force replace tag latest

--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -66,6 +66,6 @@ task dockerTagLatest(type: Exec){
 	def stageDir = file(project.buildDir.absolutePath + '/docker')
 
 	workingDir stageDir
-	commandLine (['docker', 'tag', "lumue/getdown:${project.version}", 'lumue/getdown:latest'])
+	commandLine (['docker', 'tag','-f', "lumue/getdown:${project.version}", 'lumue/getdown:latest'])
 
 }
