use alpine based image

--- a/getdown-app-springboot/src/main/docker/Dockerfile
+++ b/getdown-app-springboot/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM lumue/jdkydl
+FROM lumue/jdkydl:alpine
 MAINTAINER lm "mueller.lutz@gmail.com"
 
 RUN ln -s `which youtube-dl` /usr/local/bin/youtube-dl
