--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ allprojects {
 
 	ext {
 		jdk_version = '1.8'
-		spring_boot_version = '1.4.0.RC1'
+		spring_boot_version = '1.4.0.RELEASE'
 		findbugs_version = '3.0.1'
 		reactor_version = '2.5.0.BUILD-SNAPSHOT'
 		logback_version = '1.1.7'
