--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,6 @@ script:
 after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker tag -f lumue/getdown:master-SNAPSHOT lumue/getdown:latest
-  - docker push lumue/getdown:master-SNAPSHOT
+  - docker push lumue/getdown:redis-SNAPSHOT
   - docker push lumue/getdown:latest
   
