--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -1,15 +1,26 @@
 buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version")
+		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
+
 	}
 }
 
 
 apply plugin: 'spring-boot'
+apply plugin: 'propdeps'
+apply plugin: 'propdeps-maven'
+apply plugin: 'propdeps-idea'
+apply plugin: 'propdeps-eclipse'
 ext['tomcat.version'] = '8.5.2'
 
 
 dependencies {
+
+	optional "org.springframework.boot:spring-boot-configuration-processor"
+
+
+
 	compile project(':getdown-core')
 	compile project(':getdown-webconsole')
 
@@ -20,7 +31,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-tomcat")
 	compile("org.springframework.boot:spring-boot-configuration-processor")
 	compile("org.springframework.boot:spring-boot-devtools")
-
+	compile("org.springframework.boot:spring-boot-starter-actuator")
 
 	compile("org.springframework:spring-messaging")
 	compile("io.projectreactor.spring:reactor-spring-context:$reactor_version")
@@ -37,6 +48,7 @@ dependencies {
 	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: "$logback_version"
 }
 
+compileJava.dependsOn(processResources)
 
 task docker(dependsOn: build) {
 
