--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -10,7 +10,7 @@ getdown.jobrunner.threads.download=5
 getdown.websocket.broadcastinterval.downloads=500
 
 server.port=8001
-tomcat.version=8.0.3
+tomcat.version=8.5.2
 
 #logging
 logging.file=${getdown.path.log}/getdown.log
@@ -19,14 +19,12 @@ logging.level.org.springframework=INFO
 logging.level.org.apache.http=INFO
 
 # REDIS (RedisProperties)
-#spring.redis.database=0
-#spring.redis.host=localhost
-#spring.redis.password= # Login password of the redis server.
-#spring.redis.pool.max-active=8 # Max number of connections that can be allocated by the pool at a given time. Use a negative value for no limit.
-#spring.redis.pool.max-idle=8 # Max number of "idle" connections in the pool. Use a negative value to indicate an unlimited number of idle connections.
-#spring.redis.pool.max-wait=-1 # Maximum amount of time (in milliseconds) a connection allocation should block before throwing an exception when the pool is exhausted. Use a negative value to block indefinitely.
-#spring.redis.pool.min-idle=0 # Target for the minimum number of idle connections to maintain in the pool. This setting only has an effect if it is positive.
-#spring.redis.port=6379 # Redis server port.
-#spring.redis.sentinel.master= # Name of Redis server.
-#spring.redis.sentinel.nodes= # Comma-separated list of host:port pairs.
-#spring.redis.timeout=0 # Connection timeout in milliseconds.
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.password= # Login password of the redis server.
+spring.redis.pool.max-active=8
+spring.redis.pool.max-idle=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.min-idle=0
+spring.redis.port=6379
+spring.redis.timeout=0
