--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -42,7 +42,8 @@ dependencies {
 
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 
-	compile "org.slf4j:slf4j-api:$slf4j_version"
+	compile 'org.slf4j:slf4j-api:1.7.10'
+	compile group: 'org.apache.tomcat', name: 'tomcat-juli', version: '8.5.2'
 
 	testCompile 'junit:junit:4.11'
 	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: "$logback_version"
