--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -21,7 +21,7 @@ logging.level.org.apache.http=INFO
 # REDIS (RedisProperties)
 spring.redis.database=0
 spring.redis.host=localhost
-spring.redis.password= # Login password of the redis server.
+#spring.redis.password= # Login password of the redis server.
 spring.redis.pool.max-active=8
 spring.redis.pool.max-idle=8
 spring.redis.pool.max-wait=-1
