--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 
+
+
 allprojects {
 
 	ext {
 		jdk_version = '1.8'
-		spring_boot_version = '1.4.0.RELEASE'
+		spring_boot_version = '1.4.1.RELEASE'
 		findbugs_version = '3.0.1'
 		reactor_version = '2.5.0.BUILD-SNAPSHOT'
 		logback_version = '1.1.7'
@@ -11,6 +13,7 @@ allprojects {
 		cucumber_version='1.2.5'
 		gatling_version='2.2.2'
 		apache_http_version='4.5.2'
+		jackson_version = '2.8.3'
 	}
 
 	buildscript {
@@ -62,6 +65,8 @@ allprojects {
 		testCompile 'junit:junit:4.11'
 		testCompile group: 'ch.qos.logback', name: 'logback-classic', version: "$logback_version"
 	}
+
+
 
 
 	configurations.all {
