--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ allprojects {
 
 	ext {
 		jdk_version = '1.8'
-		spring_boot_version = '1.4.1.RELEASE'
+		spring_boot_version = '2.0.0.BUILD-SNAPSHOT'
 		findbugs_version = '3.0.1'
 		reactor_version = '2.5.0.BUILD-SNAPSHOT'
 		logback_version = '1.1.7'
