--- a/getdown-core/build.gradle
+++ b/getdown-core/build.gradle
@@ -7,7 +7,7 @@ dependencies {
 
 	compile 'com.github.lumue:ydlwrapper:master-SNAPSHOT'
 
-	compile "io.projectreactor:reactor-core:3.0.3.RELEASE"
+	compile "io.projectreactor:reactor-core:$reactor_version"
 	compile "io.projectreactor:reactor-bus:$reactor_version"
 
 
