add temp download path property

--- a/getdown-app-springboot/src/main/docker/Dockerfile
+++ b/getdown-app-springboot/src/main/docker/Dockerfile
@@ -12,4 +12,4 @@ EXPOSE 8001
 VOLUME ["/getdown"]
 VOLUME ["/downloads"]
 
-ENTRYPOINT ["java","-Dgetdown.path.home=/getdown", "-Dgetdown.path.download=/downloads","-jar","/app.jar"]
+ENTRYPOINT ["java","-Dgetdown.path.home=/getdown", "-Dgetdown.path.media=/downloads","-jar","/app.jar"]
