--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 getdown.path.home=/getdown
 getdown.path.config=${getdown.path.home}/config
-getdown.path.download =${getdown.path.home}/Downloads
+getdown.path.media =${getdown.path.home}/media
 getdown.path.log=${getdown.path.home}/log
 getdown.path.repository=${getdown.path.home}/repository
+getdown.path.download =${getdown.path.home}/download
 
 getdown.jobrunner.threads.prepare=5
 getdown.jobrunner.threads.download=5
