--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 	compile "io.projectreactor:reactor-bus:$reactor_version"
 	compile "io.projectreactor:reactor-stream:$reactor_version"
 
-
+	compile 'org.springframework.hateoas:spring-hateoas:0.20.0.RELEASE'
 
 
 	compile 'org.slf4j:slf4j-api:1.7.10'
