--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -7,6 +7,7 @@ getdown.path.download =${getdown.path.home}/download
 
 getdown.jobrunner.threads.prepare=5
 getdown.jobrunner.threads.download=5
+getdown.jobrunner.threads.postprocess=5
 
 getdown.websocket.broadcastinterval.downloads=500
 
