--- a/getdown-webconsole/build.gradle
+++ b/getdown-webconsole/build.gradle
@@ -10,9 +10,9 @@ task npmInstall( type: Exec){
 
 
 // Install the bower components for front-end library management
-task bowerInstall( type: Exec, dependsOn: npmInstall){
+task bowerInstall( type: Exec){
 	workingDir '.'
-	commandLine "bower", 'install','-f'
+	commandLine "bower", 'install'
 }
 
 task gulp(type: Exec, dependsOn: bowerInstall){
