--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -19,3 +19,5 @@ logging.file=${getdown.path.log}/getdown.log
 logging.level.io.github.lumue.getdown=DEBUG
 logging.level.org.springframework=INFO
 logging.level.org.apache.http=INFO
+
+spring.jackson.serialization.write_dates_as_timestamps=false
