--- a/getdown-webconsole/bower.json
+++ b/getdown-webconsole/bower.json
@@ -3,17 +3,34 @@
   "private": true,
   "dependencies": {
     "byutv-jsonp": "^1.2.0",
-    "iron-elements": "PolymerElements/iron-elements#^1.0.10",
     "lodash": "~4.13.1",
-    "neon-elements": "PolymerElements/neon-elements#^1.0.0",
     "page": "visionmedia/page.js#~1.6.4",
-    "paper-elements": "PolymerElements/paper-elements#^1.0.7",
-    "platinum-elements": "PolymerElements/platinum-elements#^2.0.0",
     "polymer": "Polymer/polymer#^1.7.0",
     "sockjs": "~0.3.4",
     "stomp-client": "lumue/polymer-stomp-client#^0.0.1",
     "stomp-websocket": "~2.3.4",
-    "vaadin-grid": "^1.0.0"
+    "vaadin-grid": "^1.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
+    "iron-icons": "PolymerElements/iron-icons#^1.2.0",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.8",
+    "iron-selector": "PolymerElements/iron-selector#^1.5.2",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
+    "iron-list": "PolymerElements/iron-list#^1.3.15",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.10",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
+    "paper-card": "PolymerElements/paper-card#^1.1.4",
+    "paper-input": "PolymerElements/paper-input#^1.1.22",
+    "paper-material": "PolymerElements/paper-material#^1.0.6",
+    "paper-menu": "PolymerElements/paper-menu#^1.2.2",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.16",
+    "paper-styles": "PolymerElements/paper-styles#^1.1.5",
+    "paper-toast": "PolymerElements/paper-toast#^1.3.0",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7",
+    "paper-button": "PolymerElements/paper-button#^1.0.14",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
+    "paper-progress": "PolymerElements/paper-progress#^1.0.11",
+    "paper-item": "PolymerElements/paper-item#^1.2.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
