run docker and load test from gradle

--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -97,6 +97,50 @@ task dockerBuild(type: Exec){
 
 }
 
+task dockerRun(type: Exec){
+
+	dependsOn 'dockerBuild'
+
+	def stageDir = file(project.buildDir.absolutePath + '/docker')
+
+	workingDir stageDir
+	executable = 'docker'
+	args=['run','-d',
+	      '--name',"getdown_${project.version}",
+	      '-p','8001:8001',
+	      "lumue/getdown:${project.version}"]
+
+	doLast{
+		sleep(10*1000)
+	}
+
+}
+
+task dockerStop(type: Exec){
+
+	def stageDir = file(project.buildDir.absolutePath + '/docker')
+
+	workingDir stageDir
+	executable = 'docker'
+	args=['stop',"getdown_${project.version}"]
+
+	ignoreExitValue true
+
+}
+
+task dockerRemove(type: Exec){
+
+	dependsOn 'dockerStop'
+
+	def stageDir = file(project.buildDir.absolutePath + '/docker')
+
+	workingDir stageDir
+	executable = 'docker'
+	args=['rm','-f',"getdown_${project.version}"]
+
+	ignoreExitValue true
+}
+
 task dockerTagLatest(type: Exec){
 
 	mustRunAfter 'dockerBuild'
@@ -107,4 +151,9 @@ task dockerTagLatest(type: Exec){
 	executable = 'docker'
 	args= ['tag','-f', "lumue/getdown:${project.version}", 'lumue/getdown:latest']
 
+}
+
+task loadTest{
+	dependsOn 'dockerRun','gatlingRun'
+	finalizedBy 'dockerRemove'
 }
