--- a/getdown-webconsole/bower.json
+++ b/getdown-webconsole/bower.json
@@ -2,19 +2,14 @@
   "name": "getdown-console",
   "private": true,
   "dependencies": {
-
     "lodash": "^4.13.1",
-
     "polymer": "Polymer/polymer#^1.7.0",
-
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
     "iron-icons": "PolymerElements/iron-icons#^1.2.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.8",
     "iron-selector": "PolymerElements/iron-selector#^1.5.2",
     "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
-    "iron-list": "PolymerElements/iron-list#^1.3.15",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
-
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.10",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
     "paper-card": "PolymerElements/paper-card#^1.1.4",
@@ -29,8 +24,9 @@
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
     "paper-progress": "PolymerElements/paper-progress#^1.0.11",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
-
-    "stomp-client": "^0.0.2"
+    "stomp-client": "^0.0.2",
+    "vaadin-grid": "#2.0-dev",
+    "paper-checkbox": "^1.4.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
