--- a/getdown-webconsole/bower.json
+++ b/getdown-webconsole/bower.json
@@ -17,6 +17,7 @@
     "paper-material": "PolymerElements/paper-material#^1.0.6",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.16",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.16",
     "paper-styles": "PolymerElements/paper-styles#^1.1.5",
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7",
@@ -25,7 +26,7 @@
     "paper-progress": "PolymerElements/paper-progress#^1.0.11",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "stomp-client": "^0.0.2",
-    "vaadin-grid": "#2.0-dev",
+    "vaadin-grid": "^2.0.3",
     "paper-checkbox": "^1.4.2"
   },
   "devDependencies": {
