add redux actions for posting and fetching tasks to new ui

--- a/getdown-ux-console/package.json
+++ b/getdown-ux-console/package.json
@@ -11,5 +11,10 @@
     "lint:javascript": "eslint . --ext js,html --ignore-path .gitignore",
     "test": "polymer test",
     "test:integration": "polymer build # test that psk builds without error with the CLI"
+  },
+  "dependencies": {
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1"
   }
 }
