--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
 	compile project(':getdown-core')
 	compile project(':getdown-webconsole')
+	compile project(':getdown-ux-console')
 
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-logging")
