--- a/getdown-ux-console/src/main/polymer/console/bower.json
+++ b/getdown-ux-console/src/main/polymer/console/bower.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
+    "iron-flex-layout": "^2.0.1",
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.0.0",
     "iron-media-query": "PolymerElements/iron-media-query#^2.0.0",
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
@@ -20,7 +20,8 @@
     "polymer-redux": "^1.0.3",
     "paper-input": "^2.0.2",
     "paper-button": "^2.0.0",
-    "vaadin-grid": "^3.0.2"
+    "vaadin-grid": "^3.0.2",
+    "paper-styles": "^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
