--- a/getdown-ux-console/src/main/polymer/console/manifest.json
+++ b/getdown-ux-console/src/main/polymer/console/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "My App",
-  "short_name": "My App",
-  "description": "My App description",
+  "name": "webconsole",
+  "short_name": "webconsole",
+  "description": "webconsole for getdown",
   "start_url": "./?homescreen=1",
   "display": "standalone",
   "theme_color": "#3f51b5",
