--- a/getdown-ux-console/src/main/polymer/console/package.json
+++ b/getdown-ux-console/src/main/polymer/console/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "webconsole",
   "license": "BSD-3-Clause",
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.0",
-    "eslint-plugin-html": "^2.0.0"
+    "eslint-plugin-html": "^2.0.0",
+    "bower": "^1.8.2",
+    "bower-nexus3-resolver": "*",
+    "polymer-cli": "^1.5.7",
+    "polymer-editor-service":"*"
   },
   "scripts": {
     "lint": "npm run lint:javascript && polymer lint",
