--- a/getdown-core/build.gradle
+++ b/getdown-core/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	compile 'io.reactivex:rxjava-reactive-streams:1.2.1'
 
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
+
+	compile group: 'javax.annotation', name: 'jsr250-api', version: '1.0'
+
 }
 
 apply from: '../gradle/plantuml.gradle'
