--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ getdown-testvideo/build
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+gradle-wrapper.jar
 
 # Cache of project
 .gradletasknamecache
