work on buildprocess for html apps

--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,11 @@ allprojects {
 	}
 
 
-
+	idea {
+		module {
+			outputDir file("out/production/classes")
+		}
+	}
 
 	configurations.all {
 		resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
