--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -39,7 +39,8 @@ dependencies {
 
 
 	compile project(':getdown-core')
-	compile project(':getdown-webconsole')
+	//compile project(':getdown-webconsole')
+	compile project(':getdown-ux-console')
 
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-logging")
