--- a/getdown-ux-console/src/main/polymer/console/bower.json
+++ b/getdown-ux-console/src/main/polymer/console/bower.json
@@ -21,7 +21,8 @@
     "paper-input": "^2.0.2",
     "paper-button": "^2.0.0",
     "vaadin-grid": "^3.0.2",
-    "paper-styles": "^2.0.0"
+    "paper-styles": "^2.0.0",
+    "paper-progress": "^2.0.1"
   },
   "resolutions": {
     "polymer": "^2.0.0"
