--- a/getdown-ux-console/src/main/polymer/console/bower.json
+++ b/getdown-ux-console/src/main/polymer/console/bower.json
@@ -12,17 +12,19 @@
     "iron-media-query": "PolymerElements/iron-media-query#^2.0.0",
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
     "iron-selector": "PolymerElements/iron-selector#^2.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
-    "polymer": "Polymer/polymer#^2.0.0",
+    "paper-icon-button": "^2.2.0",
+    "polymer": "Polymer/polymer#^2.6.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "stomp-client": "^2.0.2",
     "iron-ajax": "^2.0.5",
     "polymer-redux": "^1.0.3",
     "paper-input": "^2.0.2",
     "paper-button": "^2.0.0",
-    "vaadin-grid": "^3.0.2",
+    "vaadin-grid": "^5.0.3",
     "paper-styles": "^2.0.0",
-    "paper-progress": "^2.0.1"
+    "paper-progress": "^2.0.1",
+    "vaadin-material-theme": "vaadin/vaadin-material-theme#^0.3.0",
+    "iron-icons": "^2.1.1"
   },
   "resolutions": {
     "polymer": "^2.0.0"
