--- a/getdown-ux-console/src/main/polymer/console/package.json
+++ b/getdown-ux-console/src/main/polymer/console/package.json
@@ -17,6 +17,7 @@
     "test:integration": "polymer build # test that psk builds without error with the CLI"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
