--- a/getdown-ux-console/src/main/polymer/console/bower.json
+++ b/getdown-ux-console/src/main/polymer/console/bower.json
@@ -15,7 +15,6 @@
     "paper-icon-button": "^2.2.0",
     "polymer": "Polymer/polymer#^2.6.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "stomp-client": "^2.0.2",
     "iron-ajax": "^2.0.5",
     "polymer-redux": "^1.0.3",
     "paper-input": "^2.0.2",
@@ -24,7 +23,12 @@
     "paper-styles": "^2.1.0",
     "paper-progress": "^2.0.1",
     "vaadin-material-theme": "vaadin/vaadin-material-theme#^0.3.0",
-    "iron-icons": "^2.1.1"
+    "iron-icons": "^2.1.1",
+    "vaadin-split-layout": "vaadin/vaadin-split-layout#^4.0.0",
+    "vaadin-button": "vaadin/vaadin-button#^2.0.0",
+    "vaadin-progress-bar": "vaadin/vaadin-progress-bar#^1.0.0",
+    "vaadin-dialog": "vaadin/vaadin-dialog#^2.0.0",
+    "sse-client": "^0.0.4"
   },
   "resolutions": {
     "polymer": "^2.0.0"
