--- a/getdown-core/build.gradle
+++ b/getdown-core/build.gradle
@@ -5,7 +5,7 @@ sourceCompatibility = jdk_version
 targetCompatibility = jdk_version
 dependencies {
 
-	compile 'com.github.lumue:ydlwrapper:-SNAPSHOT'
+	compile 'com.github.lumue:ydlwrapper:master-SNAPSHOT'
 
 	compile "io.projectreactor:reactor-core:$reactor_version"
 	compile "io.projectreactor:reactor-bus:$reactor_version"
