--- a/getdown-ux-console/src/main/polymer/console/bower.json
+++ b/getdown-ux-console/src/main/polymer/console/bower.json
@@ -8,7 +8,7 @@
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.0",
     "iron-flex-layout": "^2.0.1",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.0.0",
+    "iron-iconset-svg": "^2.2.1",
     "iron-media-query": "PolymerElements/iron-media-query#^2.0.0",
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
     "iron-selector": "PolymerElements/iron-selector#^2.0.0",
@@ -30,7 +30,8 @@
     "vaadin-dialog": "vaadin/vaadin-dialog#^2.0.0",
     "sse-client": "^1.0.0",
     "vaadin-form-layout": "vaadin/vaadin-form-layout#^2.0.0",
-    "vaadin-tabs": "vaadin/vaadin-tabs#^2.0.0"
+    "vaadin-tabs": "vaadin/vaadin-tabs#^2.0.0",
+    "paper-tooltip": "^2.1.1"
   },
   "resolutions": {
     "polymer": "^2.0.0"
