update branch name for docker tagging in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
 
 after_success:
   - docker login  -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - docker tag  lumue/getdown:upgrade-to-boot2
-  - docker push lumue/getdown:upgrade-to-boot2
+  - docker tag  lumue/getdown:master-SNAPSHOT lumue/getdown:latest
+  - docker push lumue/getdown:master-SNAPSHOT
+  - docker push lumue/getdown:latest
 
