--- a/getdown-ux-console/build.gradle
+++ b/getdown-ux-console/build.gradle
@@ -49,7 +49,7 @@ task polymerBuild(type: NodeTask, dependsOn: polymerInstall) {
 	script=file(polymerScript)
 	execOverrides {
 		it.workingDir = polymerAppDir
-		it.args=[polymerScript,"build","--"]
+		it.args=[polymerScript,"build"]
 	}
 
 }
