--- a/getdown-ux-console/src/main/polymer/console/bower.json
+++ b/getdown-ux-console/src/main/polymer/console/bower.json
@@ -31,7 +31,8 @@
     "sse-client": "^1.0.0",
     "vaadin-form-layout": "vaadin/vaadin-form-layout#^2.0.0",
     "vaadin-tabs": "vaadin/vaadin-tabs#^2.0.0",
-    "paper-tooltip": "^2.1.1"
+    "paper-tooltip": "^2.1.1",
+    "moment": "momentjs#^2.22.2"
   },
   "resolutions": {
     "polymer": "^2.0.0"
