--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -15,8 +15,8 @@ server.port=8001
 
 #logging
 logging.file=${getdown.path.log}/getdown.log
-logging.level.io.github.lumue.getdown=DEBUG
-logging.level.org.springframework=INFO
-logging.level.org.apache.http=INFO
+logging.level.io.github.lumue.getdown=INFO
+logging.level.org.springframework=WARN
+logging.level.org.apache.http=WARN
 
 spring.jackson.serialization.write_dates_as_timestamps=false
