--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,13 @@ allprojects {
 		jdk_version = '1.8'
 		spring_boot_version = '2.0.2.RELEASE'
 		findbugs_version = '3.0.1'
-		reactor_version = '2.5.0.BUILD-SNAPSHOT'
-		logback_version = '1.1.7'
+		reactor_version = '2.0.7.RELEASE'
+		reactor_spring_version = '2.0.7.RELEASE'
+		logback_version = '1.4.12'
 		slf4j_version ='1.7.21'
 		cucumber_version='1.2.5'
 		gatling_version='2.2.2'
-		apache_http_version='4.5.2'
+		apache_http_version='4.5.13'
 		jackson_version = '2.8.3'
 	}
 
@@ -23,21 +24,14 @@ allprojects {
 		repositories {
 			mavenCentral()
 			maven { url "https://plugins.gradle.org/m2/" }
-			jcenter()
-			maven { url "http://repo.spring.io/snapshot" }
-			maven { url "http://repo.spring.io/milestone" }
-			maven { url 'http://repo.spring.io/plugins-release' }
 		}
 
 	}
+
+
 	repositories {
 		mavenCentral()
 		maven { url "https://jitpack.io" }
-		maven { url 'http://repo.spring.io/libs-snapshot' }
-		maven { url 'http://repo.spring.io/milestone' }
-		maven { url 'http://repo.spring.io/snapshot' }
-		maven { url 'https://repo.spring.io/libs-milestone'	}
-		jcenter()
 	}
 
 
@@ -65,7 +59,7 @@ allprojects {
 	dependencies{
 		compile "org.scala-lang:scala-library:2.11.7"
 
-		testCompile 'junit:junit:4.11'
+		testCompile 'junit:junit:4.13.1'
 		testCompile group: 'ch.qos.logback', name: 'logback-classic', version: "$logback_version"
 	}
 
