--- a/getdown-app-springboot/build.gradle
+++ b/getdown-app-springboot/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version")
-		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
 		classpath "gradle.plugin.com.github.lkishalmi.gradle:gradle-gatling-plugin:0.4.1"
 	}
 }
@@ -9,9 +8,6 @@ buildscript {
 
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'propdeps'
-apply plugin: 'propdeps-maven'
-apply plugin: 'propdeps-idea'
 
 apply plugin: "com.github.lkishalmi.gatling"
 gatling {
@@ -32,20 +28,15 @@ sourceSets {
 
 
 dependencies {
-
-	optional "org.springframework.boot:spring-boot-configuration-processor"
-
-
-
 	compile project(':getdown-core')
-	compile project(':getdown-ux-console')
+//	compile project(':getdown-ux-console')
 
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-logging")
 	compile("org.springframework.boot:spring-boot-starter-actuator")
 
 	compile("org.springframework:spring-messaging")
-	compile("io.projectreactor.spring:reactor-spring-context:$reactor_version")
+	compile("io.projectreactor.spring:reactor-spring-context:$reactor_spring_version")
 	compile "io.projectreactor:reactor-core:$reactor_version"
 	compile "io.projectreactor:reactor-bus:$reactor_version"
 	compile "io.projectreactor:reactor-stream:$reactor_version"
@@ -55,7 +46,7 @@ dependencies {
 
 	compile 'org.slf4j:slf4j-api:1.7.10'
 
-	testCompile 'junit:junit:4.11'
+	testCompile 'junit:junit:4.13.1'
 	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: "$logback_version"
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 
