Update docker-compose.yml and volumes configuration
Restructured the docker-compose.yml file for better organization and updated the volume paths. Also added language settings and Java options as environment variables for improved performance and flexibility.

--- a/getdown-app-springboot/src/main/docker/docker-compose.yml
+++ b/getdown-app-springboot/src/main/docker/docker-compose.yml
@@ -1,13 +1,18 @@
-getdown:
-  image: lumue/getdown:master-SNAPSHOT
-  restart: always
-  log_driver: "syslog"
-  log_opt:
-    tag: "getdown_getdown"
-    syslog-address: "udp://192.168.1.105:514"
-  volumes:
-    - /data/docker-volumes/getdown/getdown:/getdown
-    - /mnt/nasbox/media:/downloads
-  ports:
-    - "7001:8001"
+version: '3.5'
+
+services:
+
+  getdown:
+    image: lumue/getdown:master-SNAPSHOT
+    restart: always
+    volumes:
+      - ./getdown:/getdown
+      - /mnt/truenas/downloads/:/downloads
+    ports:
+      - "7001:8001"
+    environment:
+      - LANG=C.UTF-8
+      - JAVA_OPTS="-Dfile.encoding=UTF-8"
+
+
 
