Remove log path from application environment initialization
The log path configuration entry has been removed from the ApplicationEnvironmentInitializer in the getdown-app-springboot project. This simplifies the initialization process and streamlines configuration. Additionally, associated application logging levels have been adjusted accordingly.

--- a/getdown-app-springboot/src/main/resources/application.properties
+++ b/getdown-app-springboot/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 getdown.path.home=/getdown
 getdown.path.config=${getdown.path.home}/config
 getdown.path.media =${getdown.path.home}/media
-getdown.path.log=${getdown.path.home}/log
 getdown.path.repository=${getdown.path.home}/repository
 getdown.path.download =${getdown.path.home}/download
 
@@ -14,9 +13,7 @@ getdown.websocket.broadcastinterval.downloads=500
 server.port=8001
 
 #logging
-logging.file=${getdown.path.log}/getdown.log
-logging.level.io.github.lumue.getdown=INFO
-logging.level.org.springframework=WARN
-logging.level.org.apache.http=WARN
+logging.level.root=WARN
+logging.level.io.github.lumue=INFO
 
 spring.jackson.serialization.write_dates_as_timestamps=false
