--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,7 @@ allprojects {
 
 	ext {
 		jdk_version = '1.8'
-		spring_boot_version = '2.0.2.RELEASE'
-		findbugs_version = '3.0.1'
+		spring_boot_version = '2.7.18'
 		reactor_version = '2.0.7.RELEASE'
 		reactor_spring_version = '2.0.7.RELEASE'
 		logback_version = '1.3.5'
@@ -32,17 +31,6 @@ allprojects {
 	}
 
 
-	apply plugin: 'findbugs'
-	findbugs {
-		ignoreFailures = true
-		reportsDir = file("$project.buildDir/findbugsReports")
-		effort = "max"
-		reportLevel = "high"
-		visitors = ["SwitchFallthrough"]
-		omitVisitors = ["FindNonShortCircuit"]
-		toolVersion = findbugs_version
-	}
-
 	apply plugin: 'java'
 	compileJava {
 		sourceCompatibility = jdk_version
@@ -54,10 +42,10 @@ allprojects {
 	apply plugin: 'idea'
 
 	dependencies{
-		compile "org.scala-lang:scala-library:2.11.7"
+		implementation "org.scala-lang:scala-library:2.11.7"
 
-		testCompile 'junit:junit:4.13.1'
-		testCompile group: 'ch.qos.logback', name: 'logback-classic', version: "$logback_version"
+		testImplementation 'junit:junit:4.13.1'
+		testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "$logback_version"
 	}
 
 
