--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,6 @@ rootProject.name = 'getdown'
 
 include (
 	  'getdown-app-springboot',
-	  'getdown-core',
-	  'getdown-ux-console'
+	  'getdown-core'
 )
 
