--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 allprojects {
 
 	ext {
-		jdk_version = '1.8'
+		jdk_version = '17'
 		spring_boot_version = '2.7.18'
 		reactor_version = '2.0.7.RELEASE'
 		reactor_spring_version = '2.0.7.RELEASE'
@@ -32,9 +32,11 @@ allprojects {
 
 
 	apply plugin: 'java'
-	compileJava {
+	java{
+		modularity.inferModulePath = false
 		sourceCompatibility = jdk_version
 		targetCompatibility = jdk_version
+
 	}
 
 	apply plugin: 'scala'
